--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="small-6 columns">
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
+                <div class="healthbar text-center" v-bind:class="myScore"
+                style="background-color: green; margin: 0; color: white;">
+                {{ myScore }}
 
                 </div>
             </div>
@@ -21,28 +23,31 @@
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
+                    {{ monsterScore }}
 
                 </div>
             </div>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls" v-if='display'>
         <div class="small-12 columns">
-            <button id="start-game">START NEW GAME</button>
+            <button id="start-game" @click='changeDisplay'>START NEW GAME</button>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls" v-if='displayOne'>
         <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
+            <button id="attack" @click='attack'>ATTACK</button>
+            <button id="special-attack" @click='specialAttack'>SPECIAL ATTACK</button>
+            <button id="heal" @click='heal'>HEAL</button>
+            <button id="give-up" @click='giveUp'>GIVE UP</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log" v-if='displayTwo'>
         <div class="small-12 columns">
             <ul>
                 <li>
+                    <p class="monster-turn">MONSTER HITS PLAYER FOR {{ number }}</p>
+                    <p class="player-turn">PLAYER {{ hits }} {{  monster }} FOR {{ numberTwo }}</p>
 
                 </li>
             </ul>
